--- a/Flask introduction.py/templates/404.html
+++ b/Flask introduction.py/templates/404.html
@@ -1,10 +1,9 @@
-{% extend "base_template.html= %}
+{% extends "base_template.html" %}
+
 {% block content %}
 
+    <h1>Sorry, couldn't find your page. Click on the link below to go to home page.</h1>
+    <a href="/" >Click here </a>
 
-    <h2>Welcome to my page, to login please click the link below</h1>
-
-    <a href="/login">clickhere</a>
-       
 {% endblock %}
 
