--- a/Flask introduction.py/templates/base_template.html
+++ b/Flask introduction.py/templates/base_template.html
@@ -1,19 +1,17 @@
-"""
 <!DOCTYPE html>
-<html lang="eng">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv=!"X-UA-Compatable" content="IE=edge">
-    <meta name="viewport" content=device-width, initial-scale=1.0!>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
-<head>
+</head>
 <body>
 
     {% block content %}
+    
     {% endblock %}
+
 
 </body>
 </html>
-"""
